--- a/templates/requests_list.html
+++ b/templates/requests_list.html
@@ -49,7 +49,7 @@
         <tr>
             <td>{{ req.id }}</td>
                 <td>
-            {{ req.created_at.strftime('%Y-%m-%d %H:%M') if req.created_at else "-" }}
+            {{ req.created_at.strftime('%Y-%m-%d ') if req.created_at else "-" }}
         </td>
 
             <td>{{ req.title }}</td>
@@ -91,7 +91,7 @@
             </td>
                   <td>
             {% if req.status == "Completed" and req.updated_at %}
-                {{ req.updated_at.strftime('%Y-%m-%d %H:%M') }}
+                {{ req.updated_at.strftime('%Y-%m-%d') }}
             {% else %}
                 -
             {% endif %}
